@@ -1,23 +1,26 @@
-# J2EE-Learning
-J2EE studies 
+编译 
+```bash
+javac -Djava.ext.dirs=lib/ src/club/qixqi/vote/*.java
+```
 
-## Test1/search
-   by eclipse
-   
-   第一次上机做的是软院查人，样式模仿的谷歌页面，功能简单，包含精确匹配和模糊匹配，最大搜素10条，当然，精确匹配的总是显示在模糊匹配前面
-
-## Test2/search22
-   by vscode(与eclipse的工作目录结构有所不同，vscode真的爽)
-   
-   第二次是在第一次的基础上添加了分页管理并且可以更改每页的最大搜索条数，search的内容每次存储在session中，以便页面跳转的时候可以获取search的内容
-
-## Test3/search32
-   by vscode
-   
-   第三次上机实现游客的登录、管理员的登录和注册，以及管理员的增删改查功能，使用 Servlet做后台，jsp做显示层 ，增删改查全部基于“查”，与Excel表格处理方式相似，管理员双击表格，插入一个输入框，输入数据后，利用 ajax 异步传到后台，处理数据。
+#### /config/springmvc.xml
+```xml
+<load-on-startup>1</load-on-startup>
+```
+1. load-on-startup元素标记容器是否在启动的时候就加载这个servlet(实例化并调用其init()方法)。
+2. 它的值必须是一个整数，表示servlet应该被载入的顺序
+3. 当值为0或者大于0时，表示容器在应用启动时就加载并初始化这个servlet；
+4. 当值小于0或者没有指定时，则表示容器在该servlet被选择时才会去加载。
+5. 正数的值越小，该servlet的优先级越高，应用启动时就越先加载。
+6. 当值相同时，容器就会自己选择顺序来加载。
 
 
-## Test5/vote
-   by vscode
-   
-   第五次上机实现投票系统，10秒刷新一次，也可以手动刷新。使用spring mvc 框架，mysql数据库，html前端, echarts.js渲染结果，利用ajax获取 session
+## Problem
+#### /config/springmvc.xml
+视图解析器 InternalResourceViewResolver 为什么能访问到 /WEB-INF/jsp/下的文件，还是只是浏览器不能通过 url 访问 /WEB-INF/jsp/ 下的文件
+
+
+
+## 后续
+
+使用 redis 缓存数据，nginx + tomcat 集群，自定义投票系统等。
